Updated Database and Discord