@@ -1,6 +1,7 @@
 package org.solarframework.db.spring;
 
 import jakarta.persistence.Id;
+import org.solarframework.db.api.*;
 import org.springframework.jdbc.core.RowMapper;
 
 import java.lang.reflect.Field;
@@ -11,9 +12,8 @@ import java.util.stream.Collectors;
 import static org.solarframework.core.util.ClassUtils.*;
 import static org.solarframework.core.util.ClassUtils.getAllFieldsOfClassFamily;
 import static org.solarframework.core.util.ClassUtils.setFieldValue;
-import static org.solarframework.db.spring.DatabaseUtils.getTableName;
-import static org.solarframework.db.spring.DatabaseUtils.mapResultSetToObject;
-import static org.solarframework.db.spring.Provider.dbService;
+import static org.solarframework.db.spring.DatabaseRegistry.SolarDBManager;
+import static org.solarframework.db.spring.DatabaseUtils.*;
 import static org.solarframework.json.JSONItem.GSON;
 
 @SuppressWarnings("all")
@@ -24,7 +24,8 @@ public class DBObjectService<T> implements IDBObjectService<T> {
     protected transient List<String> idFields = new ArrayList<>();
     protected transient List<String> cacheHashes = new ArrayList<>();
     protected transient RowMapper<T> rowMapper;
-    protected DatabaseObject<T> dbObject;
+    protected transient DatabaseObject<T> dbObject;
+    protected transient IDatabaseService dbService;
 
 
     public List<String> getCacheHashes() {
@@ -32,26 +33,27 @@ public class DBObjectService<T> implements IDBObjectService<T> {
     }
 
 
-    public DBObjectService(DatabaseObject<T> obj) {
-        dbObject = obj;
+    public DBObjectService(IDatabaseService service, DatabaseObject<T> obj) {
+        this.dbService = service;
+        this.dbObject = obj;
         this.entityClass = (Class<T>) dbObject.getClass();
         this.tableName = getTableName(entityClass);
 
         this.cachedFields.addAll(getSerializableFieldsOfClassFamily(entityClass).stream().collect(Collectors.toList()));
-        this.cachedFields.stream().filter(f -> f.isAnnotationPresent(Id.class)).forEach(f -> this.idFields.add(f.getName().toLowerCase()));
+        this.cachedFields.stream().filter(f -> f.isAnnotationPresent(Id.class)).forEach(f -> idFields.add(f.getName().toLowerCase()));
 
         this.cachedFields.removeIf(f -> !dbService.getTableStats(tableName).columnNames.contains(f.getName().toLowerCase()));
         this.rowMapper = (rs, rowNum) -> mapResultSetToObject(rs, entityClass);
     }
 
     public String getHashedIdentifier() {
-        List<Object> ids = cachedFields.stream().filter(f -> idFields.contains(f.getName().toLowerCase())).map(f -> getFieldValue(f, this)).toList();
+        List<Object> ids = cachedFields.stream().filter(f -> idFields.contains(f.getName().toLowerCase())).map(f -> getFieldValue(f, dbObject)).toList();
         return entityClass.getName() + String.valueOf(ids.stream().map(Object::toString).collect(Collectors.joining("/")).hashCode());
     }
 
     @Override
     public String toJSON() {
-        return GSON.toJson(this);
+        return GSON.toJson(dbObject);
     }
 
     @Override
@@ -63,7 +65,7 @@ public class DBObjectService<T> implements IDBObjectService<T> {
         } catch (Exception e) {
             throw new RuntimeException("Failed to write object", e);
         } finally {
-            dbService.resetCacheFor(dbObject);
+            SolarDBManager.resetCacheFor(dbObject);
         }
     }
     @Override
@@ -75,7 +77,7 @@ public class DBObjectService<T> implements IDBObjectService<T> {
         } catch (Exception e) {
             throw new RuntimeException("Failed to insert object", e);
         } finally {
-            dbService.resetCacheFor(this);
+            SolarDBManager.resetCacheFor(dbObject);
         }
     }
 
@@ -88,7 +90,7 @@ public class DBObjectService<T> implements IDBObjectService<T> {
         } catch (Exception e) {
             throw new RuntimeException("Failed to upsert object", e);
         } finally {
-            dbService.resetCacheFor(this);
+            SolarDBManager.resetCacheFor(dbObject);
         }
     }
     @Override
@@ -100,7 +102,7 @@ public class DBObjectService<T> implements IDBObjectService<T> {
         } catch (Exception e) {
             throw new RuntimeException("Failed to upsert object", e);
         } finally {
-            dbService.resetCacheFor(this);
+            SolarDBManager.resetCacheFor(dbObject);
         }
     }
 
@@ -110,7 +112,7 @@ public class DBObjectService<T> implements IDBObjectService<T> {
         try {
             for (Field f : cachedFields) {
                 if (f.getName().equalsIgnoreCase(column)) {
-                    f.set(this, (int) getFieldValue(f, this) + amount);
+                    f.set(dbObject, (int) getFieldValue(f, dbObject) + amount);
                     break;
                 }
             }
@@ -119,7 +121,7 @@ public class DBObjectService<T> implements IDBObjectService<T> {
             List<Object> setValues = List.of(amount);
 
             String whereClause = idFields.stream().map(ID -> ID + " = ?").collect(Collectors.joining(" AND "));
-            List<Object> whereValues = idFields.stream().map(ID -> getFieldValue(cachedFields.stream().filter(f -> f.getName().equalsIgnoreCase(ID)).findFirst().orElseThrow(), this)).collect(Collectors.toList());
+            List<Object> whereValues = cleanParameterList(idFields.stream().map(ID -> getFieldValue(cachedFields.stream().filter(f -> f.getName().equalsIgnoreCase(ID)).findFirst().orElseThrow(), dbObject)).collect(Collectors.toList()));
 
             List<Object> finalValues = new ArrayList<>();
             finalValues.addAll(setValues);
@@ -130,17 +132,17 @@ public class DBObjectService<T> implements IDBObjectService<T> {
         } catch (Exception e) {
             throw new RuntimeException("No ID field found in " + tableName + ".");
         } finally {
-            dbService.resetCacheFor(this);
+            SolarDBManager.resetCacheFor(dbObject);
         }
     }
     @Override
-    public int IncrementColumns(Map<String, Object> parameters) {
+    public int IncrementColumns(Map<String, Double> parameters) {
         try {
             String setClause = parameters.entrySet().stream().map(f -> f.getKey() + " = " + f.getKey() + " + ?").collect(Collectors.joining(", "));
             List<Object> setValues = parameters.entrySet().stream().map(f -> f.getValue()).collect(Collectors.toList());
 
             String whereClause = idFields.stream().map(ID -> ID + " = ?").collect(Collectors.joining(" AND "));
-            List<Object> whereValues = idFields.stream().map(ID -> getFieldValue(cachedFields.stream().filter(f -> f.getName().equalsIgnoreCase(ID)).findFirst().orElseThrow(), this)).collect(Collectors.toList());
+            List<Object> whereValues = cleanParameterList(idFields.stream().map(ID -> getFieldValue(cachedFields.stream().filter(f -> f.getName().equalsIgnoreCase(ID)).findFirst().orElseThrow(), dbObject)).collect(Collectors.toList()));
 
             List<Object> finalValues = new ArrayList<>();
             finalValues.addAll(setValues);
@@ -151,7 +153,7 @@ public class DBObjectService<T> implements IDBObjectService<T> {
         } catch (Exception e) {
             throw new RuntimeException("No ID field found in " + tableName + ".");
         } finally {
-            dbService.resetCacheFor(this);
+            SolarDBManager.resetCacheFor(dbObject);
         }
     }
 
@@ -160,10 +162,10 @@ public class DBObjectService<T> implements IDBObjectService<T> {
     public int Update() {
         try {
             String setClause = cachedFields.stream().map(f -> f.getName() + " = ?").collect(Collectors.joining(", "));
-            List<Object> setValues = cachedFields.stream().map(f -> getFieldValue(f, this)).collect(Collectors.toList());
+            List<Object> setValues = cleanParameterList(cachedFields.stream().map(f -> getFieldValue(f, dbObject)).collect(Collectors.toList()));
 
             String whereClause = idFields.stream().map(ID -> ID + " = ?").collect(Collectors.joining(" AND "));
-            List<Object> whereValues = idFields.stream().map(ID -> getFieldValue(cachedFields.stream().filter(f -> f.getName().equalsIgnoreCase(ID)).findFirst().orElseThrow(), this)).collect(Collectors.toList());
+            List<Object> whereValues = cleanParameterList(idFields.stream().map(ID -> getFieldValue(cachedFields.stream().filter(f -> f.getName().equalsIgnoreCase(ID)).findFirst().orElseThrow(), dbObject)).collect(Collectors.toList()));
 
             List<Object> finalValues = new ArrayList<>();
             finalValues.addAll(setValues);
@@ -175,7 +177,7 @@ public class DBObjectService<T> implements IDBObjectService<T> {
             e.printStackTrace();
             throw new RuntimeException("No ID field found in " + tableName + ".");
         } finally {
-            dbService.resetCacheFor(this);
+            SolarDBManager.resetCacheFor(dbObject);
         }
     }
     @Override
@@ -185,10 +187,10 @@ public class DBObjectService<T> implements IDBObjectService<T> {
                     getAllFieldsOfClassFamily(entityClass).stream().filter(ff -> !Modifier.isTransient(ff.getModifiers()) && !Modifier.isStatic(ff.getModifiers())).toList() : cachedFields;
 
             String setClause = fieldsList.stream().filter(f -> Arrays.stream(columns).anyMatch(c -> Objects.equals(c, f.getName()))).map(f -> f.getName() + " = ?").collect(Collectors.joining(", "));
-            List<Object> setValues = fieldsList.stream().filter(f -> Arrays.stream(columns).anyMatch(c -> Objects.equals(c, f.getName()))).map(f -> getFieldValue(f, this)).collect(Collectors.toList());
+            List<Object> setValues = cleanParameterList(fieldsList.stream().filter(f -> Arrays.stream(columns).anyMatch(c -> Objects.equals(c, f.getName()))).map(f -> getFieldValue(f, dbObject)).collect(Collectors.toList()));
 
             String whereClause = idFields.stream().map(ID -> ID + " = ?").collect(Collectors.joining(" AND "));
-            List<Object> whereValues = idFields.stream().map(ID -> getFieldValue(cachedFields.stream().filter(f -> f.getName().equalsIgnoreCase(ID)).findFirst().orElseThrow(), this)).collect(Collectors.toList());
+            List<Object> whereValues = cleanParameterList(idFields.stream().map(ID -> getFieldValue(cachedFields.stream().filter(f -> f.getName().equalsIgnoreCase(ID)).findFirst().orElseThrow(), dbObject)).collect(Collectors.toList()));
 
             List<Object> finalValues = new ArrayList<>();
             finalValues.addAll(setValues);
@@ -199,7 +201,7 @@ public class DBObjectService<T> implements IDBObjectService<T> {
         } catch (Exception e) {
             throw new RuntimeException("No ID field found in " + tableName + ".");
         } finally {
-            dbService.resetCacheFor(this);
+            SolarDBManager.resetCacheFor(dbObject);
         }
     }
 
@@ -207,26 +209,26 @@ public class DBObjectService<T> implements IDBObjectService<T> {
     @Override
     public int Delete() {
         try {
-            List<Object> whereValues = idFields.stream().map(ID -> getFieldValue(cachedFields.stream().filter(f -> f.getName().equalsIgnoreCase(ID)).findFirst().orElseThrow(), this)).collect(Collectors.toList());
+            List<Object> whereValues = cleanParameterList(idFields.stream().map(ID -> getFieldValue(cachedFields.stream().filter(f -> f.getName().equalsIgnoreCase(ID)).findFirst().orElseThrow(), dbObject)).collect(Collectors.toList()));
 
             String sql = "DELETE FROM " + tableName + " WHERE " + idFields.stream().map(ID -> ID + " = ?").collect(Collectors.joining(" AND "));
             return dbService.doUpdate(sql, whereValues.toArray());
         } catch (Exception e) {
             throw new RuntimeException("No ID field found in " + tableName + ".");
         } finally {
-            dbService.resetCacheFor(this);
+            SolarDBManager.resetCacheFor(dbObject);
         }
     }
 
 
     @Override
     public <A> A refetchAttribute(String attributeName, Class<A> attributeType) {
-        Field attribute = getAllFieldsOfClassFamily(this.getClass()).stream().filter(f -> f.getName().equalsIgnoreCase(attributeName)).findFirst().orElse(null);
+        Field attribute = getAllFieldsOfClassFamily(entityClass).stream().filter(f -> f.getName().equalsIgnoreCase(attributeName)).findFirst().orElse(null);
         if (attribute == null) return null;
         String whereClause = idFields.stream().map(ID -> ID + " = ?").collect(Collectors.joining(" AND "));
-        List<Object> whereValues = idFields.stream().map(ID -> getFieldValue(cachedFields.stream().filter(f -> f.getName().equalsIgnoreCase(ID)).findFirst().orElseThrow(), this)).collect(Collectors.toList());
+        List<Object> whereValues = cleanParameterList(idFields.stream().map(ID -> getFieldValue(cachedFields.stream().filter(f -> f.getName().equalsIgnoreCase(ID)).findFirst().orElseThrow(), dbObject)).collect(Collectors.toList()));
         A val = dbService.getSingleColumnOfTableWhere(attribute.getName(), attributeType, entityClass, whereClause, whereValues.toArray()).orElse(null);
-        setFieldValue(attribute,this, val);
+        setFieldValue(attribute,dbObject, val);
         return val;
     }
 
@@ -238,15 +240,16 @@ public class DBObjectService<T> implements IDBObjectService<T> {
 
     private record ParameterManager(String columnsSeparatedByComma, String questionMarksSeparatedByComma, Object[] currentValuesList, String duplicateKeyUpdateClause) {}
     private ParameterManager getResult(boolean update) {
-        Set<Field> nonNullFields = cachedFields.stream().filter(f -> getFieldValue(f, this) != null).collect(Collectors.toSet());
+        Set<Field> nonNullFields = cachedFields.stream().filter(f -> getFieldValue(f, dbObject) != null).collect(Collectors.toSet());
 
         String columnsSeparatedByComma = nonNullFields.stream().map(Field::getName).collect(Collectors.joining(", "));
         String questionMarksSeparatedByComma = nonNullFields.stream().map(p -> "?").collect(Collectors.joining(", "));
 
-        List<Object> currentValuesList = nonNullFields.stream().map(f -> getFieldValue(f, this)).toList();
+        List<Object> currentValuesList = cleanParameterList(nonNullFields.stream().map(f -> getFieldValue(f, dbObject)).collect(Collectors.toList()));
 
         if (!update) return new ParameterManager(columnsSeparatedByComma, questionMarksSeparatedByComma, currentValuesList.toArray(), null);
         String duplicateKeyUpdateClause = cachedFields.stream().map(f -> f.getName() + " = VALUES(" + f.getName() + ")").collect(Collectors.joining(", "));
         return new ParameterManager(columnsSeparatedByComma, questionMarksSeparatedByComma, currentValuesList.toArray(), duplicateKeyUpdateClause);
     }
+
 }
